--- a/pages/add.html
+++ b/pages/add.html
@@ -2,7 +2,7 @@
 layout: search
 ---
 
-<form action="https://formspree.io/vidyasagar.singadi@gmail.com" method="post">
+<form action="https://formspree.io/f/mqkozybq" method="post">
     <input type="text" name="name">
     <input type="email" name="_replyto">
     <input type="submit" value="Send">
